- Pass the organization name to the RepoListFragment.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="view_margin_middle">12dp</dimen>
+
+    <dimen name="title_text_size">24sp</dimen>
 </resources>
