--- a/app/src/main/res/layout/fragment_welcome_page.xml
+++ b/app/src/main/res/layout/fragment_welcome_page.xml
@@ -10,11 +10,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/view_margin_middle"
+            android:padding="@dimen/view_margin_middle"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center"
-            android:text="@string/welcome_title"/>
+            android:text="@string/welcome_title"
+            android:textSize="@dimen/title_text_size"/>
 
     <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -28,11 +30,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/view_margin_middle"
+            android:padding="@dimen/view_margin_middle"
             app:layout_constraintTop_toBottomOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center"
-            android:text="@string/welcome_title_instruction"/>
+            android:text="@string/welcome_title_instruction"
+            android:textSize="@dimen/title_text_size"/>
 
     <EditText
             android:id="@+id/edit_text"
