--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="GitHubOrganizationRepos.presentation.MainActivity">
+        tools:context="githubrepos.presentation.MainActivity">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
