--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
+              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-
-    <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginTop="8dp"
-              android:layout_marginBottom="8dp"
-              android:id="@+id/content_org_name"/>
+              android:layout_margin="@dimen/view_margin_middle">
 
-    <TextView android:layout_width="match_parent"
-              android:layout_height="wrap_content"/>
+    <TextView
+            android:id="@+id/text_org_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:textSize="@dimen/sub_title_text_size"
+            android:textStyle="bold"/>
+
+    <TextView
+            android:id="@+id/text_stars"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:textSize="@dimen/sub_title_text_size"/>
+
+    <TextView
+            android:id="@+id/text_repo_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/content_text_size"/>
 
 </LinearLayout>
