--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="view_margin_middle">12dp</dimen>
 
     <dimen name="title_text_size">24sp</dimen>
+    <dimen name="sub_title_text_size">18sp</dimen>
+    <dimen name="content_text_size">14sp</dimen>
 </resources>
